# bezier-curves

./: .gitignore  CMakeLists.txt  README.md
include/bezier_curves/: bezier_curve.h  bezier_curve.hpp  factorials.h  factorials.hpp  macros.hpp  numeric.hpp  templates.hpp  utils.hpp
py/bezier/: __init__.py  bezier.py  utils.py
src/: bezier_curve.tpp  factorials.tpp  main.cpp  numeric.cpp  numeric.tpp  utils.tpp
